test('not found', bash, suite: 'command', args: [files('not-found.sh')], env: test_env, depends: all_test_txt)
test('not executable', bash, suite: 'command', args: [files('not-executable.sh')], env: test_env, depends: all_test_txt)
test('exit code 42', bash, suite: 'command', args: [files('exit-code.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 1', bash, suite: 'command', args: [files('sighup.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 2', bash, suite: 'command', args: [files('sigint.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 2 (ignore interrupts)', bash, suite: 'command', args: [files('sigint-ignore-sigint.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 2 (self kill failure)', bash, suite: 'command', args: [files('sigint-self-kill-failure.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 3', bash, suite: 'command', args: [files('sigquit.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 9', bash, suite: 'command', args: [files('sigkill.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 15', bash, suite: 'command', args: [files('sigterm.sh')], env: test_env, depends: all_test_txt)

test('cron not found', bash, suite: 'command', args: [files('cron-not-found.sh')], env: test_env, depends: all_test_txt)
test('cron not executable', bash, suite: 'command', args: [files('cron-not-executable.sh')], env: test_env, depends: all_test_txt)
test('cron exit code 0 (stderr)', bash, suite: 'command', args: [files('cron-exit-code-0-stderr.sh')], env: test_env, depends: all_test_txt)
test('cron exit code 42 (stderr)', bash, suite: 'command', args: [files('cron-exit-code-42-stderr.sh')], env: test_env, depends: all_test_txt)
test('cron exit code 0 (no stderr)', bash, suite: 'command', args: [files('cron-exit-code-0-no-stderr.sh')], env: test_env, depends: all_test_txt)
test('cron exit code 42 (no stderr)', bash, suite: 'command', args: [files('cron-exit-code-42-no-stderr.sh')], env: test_env, depends: all_test_txt)
test('cronty exit code 0 (stderr)', bash, suite: 'command', args: [files('cronty-exit-code-0-stderr.sh')], env: test_env, depends: all_test_txt)
test('cronty exit code 42 (stderr)', bash, suite: 'command', args: [files('cronty-exit-code-42-stderr.sh')], env: test_env, depends: all_test_txt)
test('cronty exit code 0 (no stderr)', bash, suite: 'command', args: [files('cronty-exit-code-0-no-stderr.sh')], env: test_env, depends: all_test_txt)
test('cronty exit code 42 (no stderr)', bash, suite: 'command', args: [files('cronty-exit-code-42-no-stderr.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 1', bash, suite: 'command', args: [files('cron-sighup.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 2', bash, suite: 'command', args: [files('cron-sigint.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 2 (ignore interrupts)', bash, suite: 'command', args: [files('cron-sigint-ignore-sigint.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 2 (self kill failure)', bash, suite: 'command', args: [files('cron-sigint-self-kill-failure.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 3 (coredump)', bash, suite: 'command', args: [files('cron-sigquit-coredump.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 3 (no coredump)', bash, suite: 'command', args: [files('cron-sigquit-no-coredump.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 9', bash, suite: 'command', args: [files('cron-sigkill.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 15', bash, suite: 'command', args: [files('cron-sigterm.sh')], env: test_env, depends: all_test_txt)

test('dtee killed by signal 1', bash, suite: 'command', args: [files('kill-ppid-sighup.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 2', bash, suite: 'command', args: [files('kill-ppid-sigint.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 2 (ignore interrupts)', bash, suite: 'command', args: [files('kill-ppid-sigint-ignore-sigint.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 3', bash, suite: 'command', args: [files('kill-ppid-sigquit.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 9', bash, suite: 'command', args: [files('kill-ppid-sigkill.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 15', bash, suite: 'command', args: [files('kill-ppid-sigterm.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 1', bash, suite: 'command', args: [files('cron-kill-ppid-sighup.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 1 (self kill failure)', bash, suite: 'command', args: [files('cron-kill-ppid-sighup-self-kill-failure.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 2', bash, suite: 'command', args: [files('cron-kill-ppid-sigint.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 2 (ignore interrupts)', bash, suite: 'command', args: [files('cron-kill-ppid-sigint-ignore-sigint.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 2 (self kill failure)', bash, suite: 'command', args: [files('cron-kill-ppid-sigint-self-kill-failure.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 3', bash, suite: 'command', args: [files('cron-kill-ppid-sigquit.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 9', bash, suite: 'command', args: [files('cron-kill-ppid-sigkill.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 15', bash, suite: 'command', args: [files('cron-kill-ppid-sigterm.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 15 (self kill failure)', bash, suite: 'command', args: [files('cron-kill-ppid-sigterm-self-kill-failure.sh')], priority: 500, env: test_env, depends: all_test_txt)
