test('not found', default_signal_handlers, suite: 'command', args: [bash, files('not-found.sh')], env: test_env, depends: all_test_txt)
test('not executable', default_signal_handlers, suite: 'command', args: [bash, files('not-executable.sh')], env: test_env, depends: all_test_txt)
test('exit code 42', default_signal_handlers, suite: 'command', args: [bash, files('exit-code.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 1', default_signal_handlers, suite: 'command', args: [bash, files('sighup.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 2', default_signal_handlers, suite: 'command', args: [bash, files('sigint.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 2 (ignore interrupts)', default_signal_handlers, suite: 'command', args: [bash, files('sigint-ignore-sigint.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 2 (self kill failure)', default_signal_handlers, suite: 'command', args: [bash, files('sigint-self-kill-failure.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 3', default_signal_handlers, suite: 'command', args: [bash, files('sigquit.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 9', default_signal_handlers, suite: 'command', args: [bash, files('sigkill.sh')], env: test_env, depends: all_test_txt)
test('terminated by signal 15', default_signal_handlers, suite: 'command', args: [bash, files('sigterm.sh')], env: test_env, depends: all_test_txt)

test('cron not found', default_signal_handlers, suite: 'command', args: [bash, files('cron-not-found.sh')], env: test_env, depends: all_test_txt)
test('cron not executable', default_signal_handlers, suite: 'command', args: [bash, files('cron-not-executable.sh')], env: test_env, depends: all_test_txt)
test('cron exit code 0 (stderr)', default_signal_handlers, suite: 'command', args: [bash, files('cron-exit-code-0-stderr.sh')], env: test_env, depends: all_test_txt)
test('cron exit code 42 (stderr)', default_signal_handlers, suite: 'command', args: [bash, files('cron-exit-code-42-stderr.sh')], env: test_env, depends: all_test_txt)
test('cron exit code 0 (no stderr)', default_signal_handlers, suite: 'command', args: [bash, files('cron-exit-code-0-no-stderr.sh')], env: test_env, depends: all_test_txt)
test('cron exit code 42 (no stderr)', default_signal_handlers, suite: 'command', args: [bash, files('cron-exit-code-42-no-stderr.sh')], env: test_env, depends: all_test_txt)
test('cronty exit code 0 (stderr)', default_signal_handlers, suite: 'command', args: [bash, files('cronty-exit-code-0-stderr.sh')], env: test_env, depends: all_test_txt)
test('cronty exit code 42 (stderr)', default_signal_handlers, suite: 'command', args: [bash, files('cronty-exit-code-42-stderr.sh')], env: test_env, depends: all_test_txt)
test('cronty exit code 0 (no stderr)', default_signal_handlers, suite: 'command', args: [bash, files('cronty-exit-code-0-no-stderr.sh')], env: test_env, depends: all_test_txt)
test('cronty exit code 42 (no stderr)', default_signal_handlers, suite: 'command', args: [bash, files('cronty-exit-code-42-no-stderr.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 1', default_signal_handlers, suite: 'command', args: [bash, files('cron-sighup.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 2', default_signal_handlers, suite: 'command', args: [bash, files('cron-sigint.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 2 (ignore interrupts)', default_signal_handlers, suite: 'command', args: [bash, files('cron-sigint-ignore-sigint.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 2 (self kill failure)', default_signal_handlers, suite: 'command', args: [bash, files('cron-sigint-self-kill-failure.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 3 (coredump)', default_signal_handlers, suite: 'command', args: [bash, files('cron-sigquit-coredump.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 3 (no coredump)', default_signal_handlers, suite: 'command', args: [bash, files('cron-sigquit-no-coredump.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 9', default_signal_handlers, suite: 'command', args: [bash, files('cron-sigkill.sh')], env: test_env, depends: all_test_txt)
test('cron terminated by signal 15', default_signal_handlers, suite: 'command', args: [bash, files('cron-sigterm.sh')], env: test_env, depends: all_test_txt)

test('dtee killed by signal 1', default_signal_handlers, suite: 'command', args: [bash, files('kill-ppid-sighup.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 2', default_signal_handlers, suite: 'command', args: [bash, files('kill-ppid-sigint.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 2 (ignore interrupts)', default_signal_handlers, suite: 'command', args: [bash, files('kill-ppid-sigint-ignore-sigint.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 3', default_signal_handlers, suite: 'command', args: [bash, files('kill-ppid-sigquit.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 9', default_signal_handlers, suite: 'command', args: [bash, files('kill-ppid-sigkill.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('dtee killed by signal 15', default_signal_handlers, suite: 'command', args: [bash, files('kill-ppid-sigterm.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 1', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sighup.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 1 (self kill failure)', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sighup-self-kill-failure.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 2', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sigint.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 2 (ignore interrupts)', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sigint-ignore-sigint.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 2 (self kill failure)', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sigint-self-kill-failure.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 3', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sigquit.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 9', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sigkill.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 15', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sigterm.sh')], priority: 500, env: test_env, depends: all_test_txt)
test('cron dtee killed by signal 15 (self kill failure)', default_signal_handlers, suite: 'command', args: [bash, files('cron-kill-ppid-sigterm-self-kill-failure.sh')], priority: 500, env: test_env, depends: all_test_txt)
