test('temporary directory create failure', bash, suite: 'input', args: [files('temp-dir-failure.sh')], env: test_env, depends: all_test_txt)
test('socket create failure (input)', bash, suite: 'input', args: [files('socket-create-failure.sh')], env: test_env, depends: all_test_txt)
test('socket create failure (stdout)', bash, suite: 'input', args: [files('socket-create-failure-2.sh')], env: test_env, depends: all_test_txt)
test('socket create failure (stderr)', bash, suite: 'input', args: [files('socket-create-failure-3.sh')], env: test_env, depends: all_test_txt)
test('socket create and output file open failure', bash, suite: 'input', args: [files('socket-create-and-output-failure.sh')], env: test_env, depends: all_test_txt)
test('socket bind failure (input)', bash, suite: 'input', args: [files('socket-bind-failure.sh')], env: test_env, depends: all_test_txt)
test('socket bind failure (stdout)', bash, suite: 'input', args: [files('socket-bind-failure-2.sh')], env: test_env, depends: all_test_txt)
test('socket bind failure (stderr)', bash, suite: 'input', args: [files('socket-bind-failure-3.sh')], env: test_env, depends: all_test_txt)
test('socket connect failure (stdout)', bash, suite: 'input', args: [files('socket-connect-failure.sh')], env: test_env, depends: all_test_txt)
test('socket connect failure (stderr)', bash, suite: 'input', args: [files('socket-connect-failure-2.sh')], env: test_env, depends: all_test_txt)
test('socket receive failure', bash, suite: 'input', args: [files('socket-recv-failure.sh')], env: test_env, depends: all_test_txt)
test('socket shutdown failure (stdout)', bash, suite: 'input', args: [files('socket-shutdown-failure.sh')], env: test_env, depends: all_test_txt)
test('socket shutdown failure (stderr)', bash, suite: 'input', args: [files('socket-shutdown-failure-2.sh')], env: test_env, depends: all_test_txt)

test('cron temporary directory create failure', bash, suite: 'input', args: [files('cron-temp-dir-failure.sh')], env: test_env, depends: all_test_txt)
test('cron socket create failure', bash, suite: 'input', args: [files('cron-socket-create-failure.sh')], env: test_env, depends: all_test_txt)
test('cron socket create and output file open failure', bash, suite: 'input', args: [files('cron-socket-create-and-output-failure.sh')], env: test_env, depends: all_test_txt)
test('cron socket bind failure', bash, suite: 'input', args: [files('cron-socket-bind-failure.sh')], env: test_env, depends: all_test_txt)
test('cron socket connect failure', bash, suite: 'input', args: [files('cron-socket-connect-failure.sh')], env: test_env, depends: all_test_txt)
test('cron socket receive failure', bash, suite: 'input', args: [files('cron-socket-recv-failure.sh')], env: test_env, depends: all_test_txt)

test('socket rcvbuf large enough', bash, suite: 'input', args: [files('socket-rcvbuf-large-enough.sh')], env: test_env, depends: all_test_txt)
test('socket rcvbuf minimum size', bash, suite: 'input', args: [files('socket-rcvbuf-minimum-size.sh')], env: test_env, depends: all_test_txt)
test('socket rcvbuf too small', bash, suite: 'input', args: [files('socket-rcvbuf-too-small.sh')], env: test_env, depends: all_test_txt)

test('socket message from unknown source', bash, suite: 'input', args: [files('socket-extra-source.sh')], env: test_env, depends: all_test_txt)
test('socket receive buffer too small', bash, suite: 'input', args: [files('socket-recv-buffer-too-small.sh')], env: test_env, depends: all_test_txt)
