test('temporary directory create failure', default_signal_handlers, suite: 'input', args: [bash, files('temp-dir-failure.sh')], env: test_env, depends: all_test_deps)
test('temporary directory not found', default_signal_handlers, suite: 'input', args: [bash, files('temp-dir-not-found.sh')], env: test_env, depends: all_test_deps)
test('temporary directory permission denied', default_signal_handlers, suite: 'input', args: [bash, files('temp-dir-permission-denied.sh')], env: test_env, depends: all_test_deps)
test('temporary directory too long', default_signal_handlers, suite: 'input', args: [bash, files('temp-dir-too-long.sh')], env: test_env, depends: all_test_deps)
test('socket name too long', default_signal_handlers, suite: 'input', args: [bash, files('socket-name-too-long.sh')], env: test_env, depends: all_test_deps)
test('socket create failure (input)', default_signal_handlers, suite: 'input', args: [bash, files('socket-create-failure.sh')], env: test_env, depends: all_test_deps)
test('socket create failure (stdout)', default_signal_handlers, suite: 'input', args: [bash, files('socket-create-failure-2.sh')], env: test_env, depends: all_test_deps)
test('socket create failure (stderr)', default_signal_handlers, suite: 'input', args: [bash, files('socket-create-failure-3.sh')], env: test_env, depends: all_test_deps)
test('socket create and output file open failure', default_signal_handlers, suite: 'input', args: [bash, files('socket-create-and-output-failure.sh')], env: test_env, depends: all_test_deps)
test('socket bind failure (input)', default_signal_handlers, suite: 'input', args: [bash, files('socket-bind-failure.sh')], env: test_env, depends: all_test_deps)
test('socket bind failure (stdout)', default_signal_handlers, suite: 'input', args: [bash, files('socket-bind-failure-2.sh')], env: test_env, depends: all_test_deps)
test('socket bind failure (stderr)', default_signal_handlers, suite: 'input', args: [bash, files('socket-bind-failure-3.sh')], env: test_env, depends: all_test_deps)
test('socket connect failure (stdout)', default_signal_handlers, suite: 'input', args: [bash, files('socket-connect-failure.sh')], env: test_env, depends: all_test_deps)
test('socket connect failure (stderr)', default_signal_handlers, suite: 'input', args: [bash, files('socket-connect-failure-2.sh')], env: test_env, depends: all_test_deps)
test('socket receive failure', default_signal_handlers, suite: 'input', args: [bash, files('socket-recv-failure.sh')], env: test_env, depends: all_test_deps)
test('socket shutdown failure (stdout)', default_signal_handlers, suite: 'input', args: [bash, files('socket-shutdown-failure.sh')], env: test_env, depends: all_test_deps)
test('socket shutdown failure (stderr)', default_signal_handlers, suite: 'input', args: [bash, files('socket-shutdown-failure-2.sh')], env: test_env, depends: all_test_deps)

test('cron temporary directory create failure', default_signal_handlers, suite: 'input', args: [bash, files('cron-temp-dir-failure.sh')], env: test_env, depends: all_test_deps)
test('cron temporary directory not found', default_signal_handlers, suite: 'input', args: [bash, files('cron-temp-dir-not-found.sh')], env: test_env, depends: all_test_deps)
test('cron temporary directory permission denied', default_signal_handlers, suite: 'input', args: [bash, files('cron-temp-dir-permission-denied.sh')], env: test_env, depends: all_test_deps)
test('cron temporary directory too long', default_signal_handlers, suite: 'input', args: [bash, files('cron-temp-dir-too-long.sh')], env: test_env, depends: all_test_deps)
test('cron socket name too long', default_signal_handlers, suite: 'input', args: [bash, files('cron-socket-name-too-long.sh')], env: test_env, depends: all_test_deps)
test('cron socket create failure', default_signal_handlers, suite: 'input', args: [bash, files('cron-socket-create-failure.sh')], env: test_env, depends: all_test_deps)
test('cron socket create and output file open failure', default_signal_handlers, suite: 'input', args: [bash, files('cron-socket-create-and-output-failure.sh')], env: test_env, depends: all_test_deps)
test('cron socket bind failure', default_signal_handlers, suite: 'input', args: [bash, files('cron-socket-bind-failure.sh')], env: test_env, depends: all_test_deps)
test('cron socket connect failure', default_signal_handlers, suite: 'input', args: [bash, files('cron-socket-connect-failure.sh')], env: test_env, depends: all_test_deps)
test('cron socket receive failure', default_signal_handlers, suite: 'input', args: [bash, files('cron-socket-recv-failure.sh')], env: test_env, depends: all_test_deps)

test('socket rcvbuf large enough', default_signal_handlers, suite: 'input', args: [bash, files('socket-rcvbuf-large-enough.sh')], env: test_env, depends: all_test_deps)
test('socket rcvbuf minimum size', default_signal_handlers, suite: 'input', args: [bash, files('socket-rcvbuf-minimum-size.sh')], env: test_env, depends: all_test_deps)
test('socket rcvbuf too small', default_signal_handlers, suite: 'input', args: [bash, files('socket-rcvbuf-too-small.sh')], env: test_env, depends: all_test_deps)

test('socket message from unknown source', default_signal_handlers, suite: 'input', args: [bash, files('socket-extra-source.sh')], env: test_env, depends: all_test_deps)
test('socket receive buffer too small', default_signal_handlers, suite: 'input', args: [bash, files('socket-recv-buffer-too-small.sh')], env: test_env, depends: all_test_deps)
