test('none', bash, suite: 'options', args: [files('none.sh')], env: test_env, depends: all_test_txt)
test('cron', bash, suite: 'options', args: [files('cron.sh')], env: test_env, depends: all_test_txt)
test('invalid short options', bash, suite: 'options', args: [files('invalid-short.sh')], env: test_env, depends: all_test_txt)
test('invalid short options with arguments', bash, suite: 'options', args: [files('invalid-short-args.sh')], env: test_env, depends: all_test_txt)
test('invalid long options', bash, suite: 'options', args: [files('invalid-long.sh')], env: test_env, depends: all_test_txt)
test('invalid long options with arguments', bash, suite: 'options', args: [files('invalid-long-args.sh')], env: test_env, depends: all_test_txt)
test('1 file', bash, suite: 'options', args: [files('1-file.sh')], env: test_env, depends: all_test_txt)
test('2 files', bash, suite: 'options', args: [files('2-files.sh')], env: test_env, depends: all_test_txt)
test('3 files', bash, suite: 'options', args: [files('3-files.sh')], env: test_env, depends: all_test_txt)
test('command with no arguments', bash, suite: 'options', args: [files('cmd-noargs.sh')], env: test_env, depends: all_test_txt)
test('command with 1 argument', bash, suite: 'options', args: [files('cmd-1-arg.sh')], env: test_env, depends: all_test_txt)
test('command with 2 arguments', bash, suite: 'options', args: [files('cmd-2-args.sh')], env: test_env, depends: all_test_txt)
test('command with 3 arguments', bash, suite: 'options', args: [files('cmd-3-args.sh')], env: test_env, depends: all_test_txt)
test('command stops following options', bash, suite: 'options', args: [files('cmd-opts.sh')], env: test_env, depends: all_test_txt)
test('obscure boost syntax', bash, suite: 'options', args: [files('cmd-obscure-boost-syntax.sh')], env: test_env, depends: all_test_txt)
test('empty command with no arguments', bash, suite: 'options', args: [files('cmd-empty-noargs.sh')], env: test_env, depends: all_test_txt)
test('empty command with 1 argument', bash, suite: 'options', args: [files('cmd-empty-1-arg.sh')], env: test_env, depends: all_test_txt)
test('empty command with 2 arguments', bash, suite: 'options', args: [files('cmd-empty-2-args.sh')], env: test_env, depends: all_test_txt)
test('empty command with 3 arguments', bash, suite: 'options', args: [files('cmd-empty-3-args.sh')], env: test_env, depends: all_test_txt)
test('empty filename and empty command', bash, suite: 'options', args: [files('mixed-empty1.sh')], env: test_env, depends: all_test_txt)
test('empty filename and empty command with empty argument', bash, suite: 'options', args: [files('mixed-empty2.sh')], env: test_env, depends: all_test_txt)
test('empty command stops following options', bash, suite: 'options', args: [files('mixed-empty3.sh')], env: test_env, depends: all_test_txt)
test('empty command stops following options even when empty', bash, suite: 'options', args: [files('mixed-empty4.sh')], env: test_env, depends: all_test_txt)
test('empty command stops following options', bash, suite: 'options', args: [files('mixed-empty5.sh')], env: test_env, depends: all_test_txt)
test('empty command stops following options', bash, suite: 'options', args: [files('mixed-empty6.sh')], env: test_env, depends: all_test_txt)
test('end of options signifier stops following options', bash, suite: 'options', args: [files('mixed-split1.sh')], env: test_env, depends: all_test_txt)
test('end of options signifier stops following options even with immediate opts', bash, suite: 'options', args: [files('mixed-split2.sh')], env: test_env, depends: all_test_txt)
test('end of options signifier stops following options at the start', bash, suite: 'options', args: [files('cmd-split1.sh')], env: test_env, depends: all_test_txt)
test('end of options signifier stops following options at the start even with empty command', bash, suite: 'options', args: [files('cmd-split2.sh')], env: test_env, depends: all_test_txt)
test('end of options signifier stops following options at the start even with empty command and empty argument', bash, suite: 'options', args: [files('cmd-split3.sh')], env: test_env, depends: all_test_txt)
