test('none', default_signal_handlers, suite: 'options', args: [bash, files('none.sh')], env: test_env, depends: all_test_deps)
test('cron', default_signal_handlers, suite: 'options', args: [bash, files('cron.sh')], env: test_env, depends: all_test_deps)
test('invalid short options', default_signal_handlers, suite: 'options', args: [bash, files('invalid-short.sh')], env: test_env, depends: all_test_deps)
test('invalid short options with arguments', default_signal_handlers, suite: 'options', args: [bash, files('invalid-short-args.sh')], env: test_env, depends: all_test_deps)
test('invalid long options', default_signal_handlers, suite: 'options', args: [bash, files('invalid-long.sh')], env: test_env, depends: all_test_deps)
test('invalid long options with arguments', default_signal_handlers, suite: 'options', args: [bash, files('invalid-long-args.sh')], env: test_env, depends: all_test_deps)
test('1 file', default_signal_handlers, suite: 'options', args: [bash, files('1-file.sh')], env: test_env, depends: all_test_deps)
test('2 files', default_signal_handlers, suite: 'options', args: [bash, files('2-files.sh')], env: test_env, depends: all_test_deps)
test('3 files', default_signal_handlers, suite: 'options', args: [bash, files('3-files.sh')], env: test_env, depends: all_test_deps)
test('command with no arguments', default_signal_handlers, suite: 'options', args: [bash, files('cmd-noargs.sh')], env: test_env, depends: all_test_deps)
test('command with 1 argument', default_signal_handlers, suite: 'options', args: [bash, files('cmd-1-arg.sh')], env: test_env, depends: all_test_deps)
test('command with 2 arguments', default_signal_handlers, suite: 'options', args: [bash, files('cmd-2-args.sh')], env: test_env, depends: all_test_deps)
test('command with 3 arguments', default_signal_handlers, suite: 'options', args: [bash, files('cmd-3-args.sh')], env: test_env, depends: all_test_deps)
test('command stops following options', default_signal_handlers, suite: 'options', args: [bash, files('cmd-opts.sh')], env: test_env, depends: all_test_deps)
test('obscure boost syntax', default_signal_handlers, suite: 'options', args: [bash, files('cmd-obscure-boost-syntax.sh')], env: test_env, depends: all_test_deps)
test('empty command with no arguments', default_signal_handlers, suite: 'options', args: [bash, files('cmd-empty-noargs.sh')], env: test_env, depends: all_test_deps)
test('empty command with 1 argument', default_signal_handlers, suite: 'options', args: [bash, files('cmd-empty-1-arg.sh')], env: test_env, depends: all_test_deps)
test('empty command with 2 arguments', default_signal_handlers, suite: 'options', args: [bash, files('cmd-empty-2-args.sh')], env: test_env, depends: all_test_deps)
test('empty command with 3 arguments', default_signal_handlers, suite: 'options', args: [bash, files('cmd-empty-3-args.sh')], env: test_env, depends: all_test_deps)
test('empty filename and empty command', default_signal_handlers, suite: 'options', args: [bash, files('mixed-empty1.sh')], env: test_env, depends: all_test_deps)
test('empty filename and empty command with empty argument', default_signal_handlers, suite: 'options', args: [bash, files('mixed-empty2.sh')], env: test_env, depends: all_test_deps)
test('empty command stops following options', default_signal_handlers, suite: 'options', args: [bash, files('mixed-empty3.sh')], env: test_env, depends: all_test_deps)
test('empty command stops following options even when empty', default_signal_handlers, suite: 'options', args: [bash, files('mixed-empty4.sh')], env: test_env, depends: all_test_deps)
test('empty command stops following options', default_signal_handlers, suite: 'options', args: [bash, files('mixed-empty5.sh')], env: test_env, depends: all_test_deps)
test('empty command stops following options', default_signal_handlers, suite: 'options', args: [bash, files('mixed-empty6.sh')], env: test_env, depends: all_test_deps)
test('end of options signifier stops following options', default_signal_handlers, suite: 'options', args: [bash, files('mixed-split1.sh')], env: test_env, depends: all_test_deps)
test('end of options signifier stops following options even with immediate opts', default_signal_handlers, suite: 'options', args: [bash, files('mixed-split2.sh')], env: test_env, depends: all_test_deps)
test('end of options signifier stops following options at the start', default_signal_handlers, suite: 'options', args: [bash, files('cmd-split1.sh')], env: test_env, depends: all_test_deps)
test('end of options signifier stops following options at the start even with empty command', default_signal_handlers, suite: 'options', args: [bash, files('cmd-split2.sh')], env: test_env, depends: all_test_deps)
test('end of options signifier stops following options at the start even with empty command and empty argument', default_signal_handlers, suite: 'options', args: [bash, files('cmd-split3.sh')], env: test_env, depends: all_test_deps)
